--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
 					<h6>Jan & Elias</h6>
 				</section>
 				<section>
-					Architecure Overview
+					<img src="images/architecture.png">
 				</section>
 				<section>
-					Features
+					<h1>Features</h1>
+					<ol>
+						<li>Register</li>
+						<li>Validation</li>
+						<li>Login</li>
+						<li>I18N</li>
+						<li>CRUD Product</li>
+						<li>Order</li>
+					</ol>
 				</section>
 				<section>
 					<img src="https://lh5.googleusercontent.com/-rcOOyxZszOw/VIdTCBTMHeI/AAAAAAAACp4/Z9QR4R1C89M/template-minion2.gif">
