--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 					<h6>Jan & Elias</h6>
 				</section>
 				<section>
+					<h1>Use Case</h1>
+					<ul>
+						<li>Anonymous</li>
+						<li>Bitcoin</li>
+						<li>Seller invitation</li>
+					</ul>
+				</section>
+				<section>
 					<img src="images/architecture.png">
 				</section>
 				<section>
