--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				</section>
 				<section>
 					<img src="https://lh5.googleusercontent.com/-rcOOyxZszOw/VIdTCBTMHeI/AAAAAAAACp4/Z9QR4R1C89M/template-minion2.gif">
+					<a href="https://bfh-webshop-frontend.herokuapp.com">https://bfh-webshop-frontend.herokuapp.com</a>
 				</section>
 			</div>
 		</div>
