--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</ol>
 				</section>
 				<section>
-					<img src="https://lh5.googleusercontent.com/-rcOOyxZszOw/VIdTCBTMHeI/AAAAAAAACp4/Z9QR4R1C89M/template-minion2.gif">
+					<img src="https://lh5.googleusercontent.com/-rcOOyxZszOw/VIdTCBTMHeI/AAAAAAAACp4/Z9QR4R1C89M/template-minion2.gif"><br>
 					<a href="https://bfh-webshop-frontend.herokuapp.com">https://bfh-webshop-frontend.herokuapp.com</a>
 				</section>
 			</div>
