adde some more shizzle

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 						<li>I18N</li>
 						<li>CRUD Product</li>
 						<li>Order</li>
+						<li>Tested Backend</li>
 					</ol>
 				</section>
 				<section>
